--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web-audio-fft-visualization-react-hooks",
+  "homepage": "http://isengupt.github.io/music-player",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://strengthmate.github.io/web-audio-fft-visualization-with-react-hooks/",
@@ -10,7 +11,6 @@
     "@primer/octicons-react": "^11.1.0",
     "classname": "0.0.0",
     "classnames": "^2.2.6",
-    "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.11",
     "nice-color-palettes": "3.0.0",
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "coveralls": "^3.0.7",
+    "gh-pages": "^2.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.0"
